--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -21,7 +21,7 @@ patcher_version_requirement: 1.10
 patcher_options:
   gravity: -19.62
 no_base_content: false
-# optional_content:
+optional_content:
 #   - name: hd_gun_models
 #     display_name: HD модели оружия
 #     description: |
@@ -33,15 +33,15 @@ no_base_content: false
 #       Новые модели для стартовых автомобилей и переработка других, для добавления новых скинов.
 #       Переработаны: Вен, Молоковоз.
 #       Новый шейдер и раскраски: Урал, Белаз, Миротворец, Скаут, Боец.
-#   - name: ost_remaster
-#     display_name: Ремастер Саундтрека
-#     description: |
-#       Ремастер OST от Антона Попова, включая треки главного меню и передвижения по локациям
-#     default_option: all_new
-#     install_settings:
-#       - name: all_new
-#         description: |
-#           Старые треки заменены новыми
-#       - name: combined
-#         description: |
-#           Новые и старые треки будут звучать наравне
+  - name: ost_remaster
+    display_name: Ремастер Саундтрека
+    description: |
+      Ремастер OST от Антона Попова, включая треки главного меню и передвижения по локациям
+    # default_option: all_new
+    # install_settings:
+    #   - name: all_new
+    #     description: |
+    #       Старые треки заменены новыми
+    #   - name: combined
+    #     description: |
+    #       Новые и старые треки будут звучать наравне
