Change manifest description for hd_vehicle_models to reflect addition of a new car

--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -32,11 +32,12 @@ optional_content:
       Переработаны:
       Шершень, Спектр, ПКТ, Корд, Вулкан, Рейнметал и Спрут.
   - name: hd_vehicle_models
-    display_name: HD Модели Грузовиков
+    display_name: HD Модели Автомобилей
     description: |
-      Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками. 
+      Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками.
+      Новый Таракан и его гоночный вариант Турбо GT. 
       + Замена колёс на варианты высокого качества для машин:
-      Таракан, Клоп, Муравей, Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
+      Клоп, Муравей, Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
     patcher_options: 
       skins_in_shop: 16
   - name: ost_remaster
