--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -4,14 +4,14 @@ name: community_remaster
 # required human readable info
 display_name: Community Remaster
 version: "1.10"
-build: "220216a"
+build: "220320a"
 description: |
   Расширенная версия Community Patch, включающая улучшения интерфейса, графики.
   Опции включают новые модели машин и оружия, а так же новый саундтрек.
 authors: DEM Team, EM2ch
 
 # optional human readable info
-release_date: "27.09.2021"
+release_date: "20.03.2022"
 language: ru
 link: https://deuswiki.com/w/Community_Remaster
 
@@ -36,9 +36,9 @@ optional_content:
     display_name: HD Модели Автомобилей
     description: |
       Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками.
-      Новый Таракан и его гоночный вариант Турбо GT. 
+      Новый Таракан и его гоночный вариант Турбо GT, новый Муравей. 
       + Замена колёс на варианты высокого качества для машин:
-      Клоп, Муравей, Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
+      Клоп, Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
     patcher_options: 
       skins_in_shop: 16
   - name: ost_remaster
