Add info about Sml1 and Sml3 to change log and manifest

--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -36,9 +36,9 @@ optional_content:
     display_name: HD Модели Автомобилей
     description: |
       Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками.
-      Новый Таракан и его гоночный вариант Турбо GT, новый Муравей. 
+      Новый Клоп, Таракан и его гоночный вариант Турбо GT, новый Муравей. 
       + Замена колёс на варианты высокого качества для машин:
-      Клоп, Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
+      Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
     patcher_options: 
       skins_in_shop: 16
   - name: ost_remaster
