--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -4,7 +4,7 @@ name: community_remaster
 # required human readable info
 display_name: Community Remaster
 version: "1.13"
-build: "230101a"
+build: "230113a"
 description: |
   Расширенная версия Community Patch, включающая переработанный интерфейс игры для адаптации под 16:9 разрешения.
   Добавлены новые, более качественные модели и анимации для части оружия и авто.
@@ -15,7 +15,7 @@ description: |
 authors: DEM Team, EM2ch
 
 # optional human readable info
-release_date: "01.01.2023"
+release_date: "01.13.2023"  # date of the current prerelease
 language: ru
 link: https://deuswiki.com/w/Community_Remaster
 
