New ComMod 2.0 and compatible manifest for remaster

--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -3,8 +3,8 @@ name: community_remaster
 
 # required human readable info
 display_name: Community Remaster
-version: "1.13"
-build: "230113a"
+version: "1.14"
+build: "230616a"
 description: |
   Расширенная версия Community Patch, включающая переработанный интерфейс игры для адаптации под 16:9 разрешения.
   Добавлены новые, более качественные модели и анимации для части оружия и авто.
@@ -15,16 +15,42 @@ description: |
 authors: DEM Team, EM2ch
 
 # optional human readable info
-release_date: "01.13.2023"  # date of the current prerelease
+release_date: "23.06.2023"  # date of the current prerelease
 language: ru
 link: https://deuswiki.com/w/Community_Remaster
+logo: assets/comrem_logo.png
+install_banner: assets/comrem_banner.png
+tags: [gameplay, bugfix, story, visual]
+change_log: assets/change_list_ru.md
+screenshots:
+  - img: assets/screen_1.jpg
+    text: На скриншоте главное меню Комьюнити Ремастера
+    # compare: screen_4.jpg 
+  - img: assets/screen_2.jpg
+    text: |
+      Новый Вэн, новый ПКТ, все элементы интерфейса отображаются в высоком качестве и не растянуты
+      [HD машины, HD пушки - опции при установке КомРема]
+  - img: assets/screen_3.jpg
+    text: |
+      Новый Молоковоз с дополнительной оранжевой раскраской, новый Спектр и Рейнметалл
+      [HD машины, HD пушки - опция при установке КомРема]
+  - img: assets/screen_4.jpg
+    text: |
+      HD 16:9 интерфейс магазина и новые иконки товаров Комьюнити Ремастера
+  - img: assets/screen_5.jpg
+    text: |
+      Вступительная катсцена, заметны корректный широкий FOV, качественная отрисовка шрифтов, портрет персонажа не растянут [КомРем]
+  - img: assets/screen_6.jpg
+    text: |
+      HD интерфейс диалогов, портрет персонажа теперь отображается в высоком разрешении [КомРем]
+# translations: [eng]
 
 # installation confguration
 prerequisites: 
   - name: community_patch
     versions: 
-      - "1.13"
-patcher_version_requirement: "1.12"
+      - "1.14"
+patcher_version_requirement: "2.0"
 patcher_options:
   gravity: -19.62
   blast_damage_friendly_fire: false
@@ -50,11 +76,3 @@ optional_content:
     description: |
       Ремастер OST от автора оригинального саундтрека - Антона Попова.
       Включает новый трек главного меню и многие темы поездки игровых локаций.
-    # default_option: all_new
-    # install_settings:
-    #   - name: all_new
-    #     description: |
-    #       Старые треки заменены новыми
-    #   - name: combined
-    #     description: |
-    #       Новые и старые треки будут звучать наравне
