--- a/remaster/manifest.yaml
+++ b/remaster/manifest.yaml
@@ -4,28 +4,29 @@ name: community_remaster
 # required human readable info
 display_name: Community Remaster
 version: "1.14"
-build: "230616a"
+build: "230621a"
 description: |
-  Расширенная версия Community Patch, включающая переработанный интерфейс игры для адаптации под 16:9 разрешения.
-  Добавлены новые, более качественные модели и анимации для части оружия и авто.
-  Улучшена графика и шейдеры оригинала.
+  Community Patch - проект пользовательского мода-патча, основной целью которого является повышение стабильности игры, исправление сюжетных ошибок, катсцен и квестов, улучшения работы игрового движка и некорректно работающих игровых систем.
 
-  Опции включают новые модели машин и оружия, а так же записанный автором оригинального саундтрека ремастер части музыки.
+  Community Remaster - расширенная версия КомПатча, включающая переработанный интерфейс игры для адаптации под 16:9 разрешения.
+  Добавлены новые, более качественные модели и анимации для части оружия и авто. Улучшена графика и шейдеры оригинала. Часть контента КомРема опциональна.
   
 authors: DEM Team, EM2ch
 
 # optional human readable info
-release_date: "16.06.2023"  # date of the current prerelease
+release_date: "21.06.2023"  # date of the current prerelease
 language: ru
+
 link: https://deuswiki.com/w/Community_Remaster
 logo: assets/comrem_logo.png
 install_banner: assets/comrem_banner.png
 tags: [gameplay, bugfix, story, visual]
 change_log: assets/change_list_ru.md
+
 screenshots:
   - img: assets/screen_1.jpg
     text: На скриншоте главное меню Комьюнити Ремастера
-    # compare: screen_4.jpg 
+    # compare: assets/screen_1_1.jpg
   - img: assets/screen_2.jpg
     text: |
       Новый Вэн, новый ПКТ, все элементы интерфейса отображаются в высоком качестве и не растянуты
@@ -43,14 +44,14 @@ screenshots:
   - img: assets/screen_6.jpg
     text: |
       HD интерфейс диалогов, портрет персонажа теперь отображается в высоком разрешении [КомРем]
-# translations: [eng]
+translations: [eng]
 
 # installation confguration
 prerequisites: 
   - name: community_patch
     versions: 
       - "1.14"
-patcher_version_requirement: "2.0"
+patcher_version_requirement: "2.0.8"
 patcher_options:
   gravity: -19.62
   blast_damage_friendly_fire: false
@@ -65,8 +66,7 @@ optional_content:
   - name: hd_vehicle_models
     display_name: HD Модели Автомобилей
     description: |
-      Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками.
-      Новый Клоп, Таракан и его гоночный вариант Турбо GT, новый Муравей. 
+      Полностью новые модели Вена и Молоковоза высокого качества с дополнительным раскрасками. Новый Клоп, Таракан и его гоночный вариант Турбо GT, новый Муравей. 
       + Замена колёс на варианты высокого качества для машин:
       Кузнечик, Скаут, Охотник, Боец, Крейсер, Белаз.
     patcher_options: 
